@@ -485,6 +485,13 @@ const gremlins = {
     g_injectX1_2_3X_tailXlocal_1X_unfold: [function({g}) { return g.inject([1, 2, 3]).tail(Scope.local, 1).unfold() }], 
     g_injectX1_2_3_4_5_6X_tailXlocal_1X: [function({g}) { return g.inject([1, 2, 3], [4, 5, 6]).tail(Scope.local, 1) }], 
     g_injectX1_2_3_4_5X_tailXlocal_2X: [function({g}) { return g.inject([1, 2, 3, 4, 5]).tail(Scope.local, 2) }], 
+    g_VX3X_repeatXout_order_byXperformancesX_tailX2XX_timesX1X_valuesXnameX: [function({g, vid3}) { return g.V(vid3).repeat(__.out().order().by("performances").tail(2)).times(1).values("name") }], 
+    g_VX3X_repeatXout_order_byXperformancesX_tailX2XX_timesX2X_valuesXnameX: [function({g, vid3}) { return g.V(vid3).repeat(__.out().order().by("performances").tail(2)).times(2).values("name") }], 
+    g_VX2X_repeatXout_localXorder_byXperformancesX_tailX1XXX_timesX1X_valuesXnameX: [function({g, vid2}) { return g.V(vid2).repeat(__.out().local(__.order().by("performances").tail(1))).times(1).values("name") }], 
+    g_VX250X_repeatXout_localXorder_byXperformancesX_tailX1XXX_timesX2X_valuesXnameX: [function({g, vid250}) { return g.V(vid250).repeat(__.out().local(__.order().by("performances").tail(1))).times(2).values("name") }], 
+    g_VX3X_repeatXout_order_byXperformancesX_tailX3X_limitX1XX_timesX2X_valuesXnameX: [function({g, vid3}) { return g.V(vid3).repeat(__.out().order().by("performances").tail(3).limit(1)).times(2).values("name") }], 
+    g_VX3X_repeatXout_order_byXperformancesX_limitX5X_tailX1XX_timesX2X_valuesXnameX: [function({g, vid3}) { return g.V(vid3).repeat(__.out().order().by("performances").limit(5).tail(1)).times(2).values("name") }], 
+    g_VX3X_repeatXoutE_order_byXweightX_tailX2X_inVX_timesX2X_valuesXnameX: [function({g, vid3}) { return g.V(vid3).repeat(__.outE().order().by("weight").tail(2).inV()).times(2).values("name") }], 
     g_V_hasXageX_asXaX_out_in_hasXageX_asXbX_selectXa_bX_whereXa_eqXbXX: [function({g}) { return g.V().has("age").as("a").out().in_().has("age").as("b").select("a", "b").where("a", P.eq("b")) }], 
     g_V_hasXageX_asXaX_out_in_hasXageX_asXbX_selectXa_bX_whereXa_neqXbXX: [function({g}) { return g.V().has("age").as("a").out().in_().has("age").as("b").select("a", "b").where("a", P.neq("b")) }], 
     g_V_hasXageX_asXaX_out_in_hasXageX_asXbX_selectXa_bX_whereXb_hasXname_markoXX: [function({g}) { return g.V().has("age").as("a").out().in_().has("age").as("b").select("a", "b").where(__.as("b").has("name", "marko")) }], 
